css/style.css
/* load fonts */
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');

/* animate GitHub badge */
/* https://github.com/tholman/github-corners */
.github-corner:hover .octo-arm {
  animation:octocat-wave 560ms ease-in-out
}
@keyframes octocat-wave {
  0%,100%{transform:rotate(0)}
  20%,60%{transform:rotate(-25deg)}
  40%,80%{transform:rotate(10deg)}
}
@media (max-width:500px) {
  .github-corner:hover .octo-arm {
    animation:none
  }
  .github-corner .octo-arm {
    animation:octocat-wave 560ms ease-in-out
  }
}

body {
  width: 97%;
  margin: 1em auto;
  font: .9em/1.2 Lato, sans-serif;
}

h1, h2, h3, h4 {
  margin-top: 0px;
  margin-bottom: 0px;
}

h1 {
  font-weight: 900;
}

h3 {
  font-weight: 300
}

svg text {
  font: 1em/1.2 Lato, sans-serif;
}

div .breaker {
  white-space: pre;
}

div.gisaid {
  white-space: nowrap;
  font-size: 1.1em;
  font-weight: 700;
  color: #446d64;
  display:flex;
  flex-direction:row;
  align-items: center;
  margin: 5px 0 5px 0;
}

footer {
  width: 100%;
  margin: 5px auto 10px auto;
  text-align: center;
  position: fixed;
  bottom: 10px;
  right: 12px;
  z-index: 150;
  background-color: rgba(255,255,255,0.7);
}

button.ack {
  /* https://stackoverflow.com/questions/1367409/how-to-make-button-look-like-a-link */
  background: none!important;
  border: none;
  padding: 0!important;
  cursor: pointer;
  font-size: 1em;
}

.treeaxis line, path {
  stroke: lightslategrey;
}
.treeaxis text {
  fill: lightslategrey;
}

.hover {
  background-color: rgba(0, 0, 0, .5);
}

.textbox {
  width: 90%;
  margin: 1em auto;
}

div.tooltip{
  position: absolute;
  text-align: left;
  padding: 12px;
  font: 12px sans-serif;
  background: lightgrey;
  border: 2px solid darkgrey;
  border-radius: 8px;
  pointer-events: none;
}

circle.default{
  fill-opacity: 1;
  stroke: black;
}

.not_SelectedBead{
  fill-opacity: 0.3;
}

.SelectedBead{
  fill-opacity: 1;
  stroke: black;
}

rect.default{
  fill-opacity: 0.5;
}

rect.SelectedCluster{
  fill-opacity: 0.9;
}

rect.not_SelectedCluster{
  fill-opacity: 0.1;
}

rect.clicked{
  fill-opacity: 1;
}

rect.SelectedCluster:hover{
  stroke: gray;
  stroke-width: 2;
}

rect:hover{
  fill-opacity: 1;
}

rect[txt_hover="yes"]{
  fill-opacity: 1 !important;
}

rect.SelectedCluster[txt_hover="yes"]{
  stroke: gray;
  stroke-width: 2;
}

.container {
    padding-top: 30px;
}

#search-bar {
    display: inline-block;
}

#search-input {
  width: 250px;
}

.or {
  margin-right: 10px;
  margin-left: 10px;
}

.dates{
  width: 90px;
  position: relative;
  z-index: 15;
}

#navigation {
  display: inline-block;
}

#search_stats {
  color: #000;
}

.disabled_stats{
  color: #ccc !important;
}

/*
details ::-webkit-details-marker {
    color: gray;
    display: none;
}

details summary::after{
  content: "";
  position: absolute;
}

[open] summary::after{
   transform:rotate(90deg) ;
}
[open] summary, summary:hover {
    box-shadow: inset 1px 0 #ddd, inset -1px 0 #ddd;
     max-height: 100px;
}

details + dl {
    max-height: 0;
    transition: all .25s;
    margin: 0 0 1rem;
    overflow: hidden;
}
[open] + dl{
  max-height: 100px;
}
*/

.box a{
   display:block;
   text-decoration: none;
    color: currentcolor
}
.box {
    position: absolute;
    background-color: #fff;
    min-width: 100px;
    max-height: 0;
    overflow: hidden;
}


/* right hand sidebar */
rightbar {
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: 250px;
    top: 0px;
    background-color: white;
    position: fixed;
    height: 100%;
    /* overflow: auto; */
    right: 0;
    /* z-index: 20;*/
    /* overflow-x: hidden; */
    overflow-y: auto;
    padding-bottom: 2px;
}

rightbar::-webkit-scrollbar {
    display: none;
}

.bar {
  position:fixed;
  z-index:10;
}
.bar form {
    height: 42px;
}
.bar input {
    border-radius: 1px;
    border: 1px solid #324B4E;
    background: #fff;
    transition: .3s linear;
}
.bar input:focus {
    width: 300px;
}

#svg-timetreeaxis {
    position: fixed;
    top: 58px;
    /* background-color: #fffa; */
}

#svg-clusteraxis {
    position: fixed;
    top: 58px;
    /* background-color: #fffa; */
}
.toplabel {
    position: fixed;
    top: 40px;
    /* background-color: #fffa; */
}

rightbar table {
    table-layout: fixed;
    width: 106%;
  overflow: visible;
    overflow-wrap: anywhere;
    font: 0.775em/1.2 Lato, sans-serif;
}

th, td {
    text-align: left;
    padding: 0 1em 0.5ex 0;
}

/* Add zebra stripping for rows */
tr:nth-child(even) {
  background-color: #f2f2f2;
}

thead tr th {
    border-bottom: 1px solid black;
}


th a, td a {
    display: block;
    width: 100%;
}

th a.sort-by {
    padding-right: 18px;
    position: relative;
}

a.sort-by:before, a.sort-by:after {
    border: 4px solid transparent;
    content: "";
    display: block;
    height: 0;
    right: 10px;
    top: 50%;
    position: absolute;
    width: 0;
}
a.sort-by:before {
    border-bottom-color: #666;
    margin-top: -9px;
}

a.sort-by:after {
    border-top-color: #666;
    margin-top: 1px;
}

.hide-before:before, .hide-after:after {
    display: none !important;
}

